--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ categories = ["pastebins"]
 
 [dependencies]
 actix-web = "4"
-actix-files = "0.6.0"
+actix-web-httpauth = "0.8.2"
+actix-multipart = "0.7.2"
+actix-files = "0.6.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.80"
 bytesize = { version = "1.1", features = ["serde"] }
@@ -23,12 +25,10 @@ chrono = "0.4.19"
 rand = "0.8.5"
 linkify = "0.8.1"
 clap = { version = "3.1.12", features = ["derive", "env"] }
-actix-multipart = "0.4.0"
 futures = "0.3"
 sanitize-filename = "0.3.0"
 log = "0.4"
 env_logger = "0.9.0"
-actix-web-httpauth = "0.6.0"
 lazy_static = "1.4.0"
 syntect = "5.0"
 qrcode-generator = "4.1.6"
@@ -38,11 +38,17 @@ harsh = "0.2"
 html-escape = "0.2.13"
 magic-crypt = "3.1.12"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.12", default-features=false, features = ["charset",
+"http2", "macos-system-configuration", "json", "blocking"] }
 
 [dependencies.openssl]
 version = "0.10.51"
 features = ["vendored"]
+
+[features]
+default = ["default-tls"]
+default-tls = ["reqwest/default-tls"]
+rustls = ["reqwest/rustls-tls"]
 
 [profile.release]
 lto = true
